# shift

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
src/: console.cpp  console.h  main.cpp  shift.h  shift_config.h  stdutils.cpp  stdutils.h
src/compiler/: argument_parser.cpp  argument_parser.h  parser.cpp  parser.h  shift_analyzer.cpp  shift_analyzer.h  shift_argument_parser.cpp  shift_argument_parser.h  shift_compiler.cpp  shift_compiler.h  shift_compiler_config.h  shift_error_handler.cpp  shift_error_handler.h  shift_parser.cpp  shift_parser.h  shift_tokenizer.cpp  shift_tokenizer.h  tokenizer.cpp  tokenizer.h
src/exceptions/: io_exception.cpp  io_exception.h  shiftexception.cpp  shiftexception.h
src/filesystem/: directory.cpp  directory.h  drive.cpp  drive.h  file.cpp  file.h
src/io/: directory.cpp  directory.h  drive.cpp  drive.h  file.cpp  file.h  shift_io_config.h
src/logging/: console.cpp  console.h
src/utils/: ordered_map.h  ordered_map_iterator.h  ordered_set.h  ordered_set_iterator.h  reverse_iterator.h  utils.cpp  utils.h
test/: builtin.shift  file.shift  test2.shift  test3.shift  test4.shift  test5.shift
test/src/: argument_parser_test.cpp  tokenizer_test.cpp
